kubernetes/adguardhome/adguardhome/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguardhome
spec:
  revisionHistoryLimit: 1
  template:
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
      - name: adguardhome
        image: adguardhome
        volumeMounts:
        - name: work-dir
          mountPath: /opt/adguardhome/work
        - name: conf-dir
          mountPath: /opt/adguardhome/conf
        - name: logs
          mountPath: /logs
        ports:
        - name: dns-tcp
          containerPort: 53
          protocol: TCP
        - name: dns-udp
          containerPort: 53
          protocol: UDP
        - name: http
          containerPort: 80
          protocol: TCP
        - name: dot
          containerPort: 853
          protocol: TCP
        - name: web-init
          containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /login.html
            port: 80
          initialDelaySeconds: 2
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /login.html
            port: 80
          initialDelaySeconds: 2
          timeoutSeconds: 5
      - name: adguard-exporter
        image: adguard-exporter
        ports:
        - name: metrics
          containerPort: 9617
          protocol: TCP
      - name: vector
        image: vector
        volumeMounts:
        - name: vector-config
          mountPath: "/etc/vector/"
          readOnly: true
        - name: logs
          mountPath: /logs
          readOnly: true
        - name: vector-data
          mountPath: /vector-data-dir
      volumes:
      - name: work-dir
        emptyDir: {}
      - name: conf-dir
        emptyDir: {}
      - name: logs
        emptyDir:
          medium: Memory
      - name: vector-data
        emptyDir:
          medium: Memory
      - name: vector-config
        projected:
          sources:
          - configMap:
              name: vector
      - name: conf
        secret:
          secretName: config
