kubernetes/adguardhome/adguardhome/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/session-cookie-name: "adguardhome"
  name: adguardhome
spec:
  ingressClassName: nginx-internal
  rules:
  - host: adguard.internal.yuha0.com
    http:
      paths:
      - backend:
          service:
            name: http
            port:
              number: 80
        path: /
        pathType: Prefix
